MDEV-39168 Do not force inline for xxhash functions in Debug builds

See https://github.com/Cyan4973/xxHash/issues/943

This fixes compiling errors like

inlining failed in call to ‘always_inline’ ‘XXH3_scrambleAcc_sse2’: function not considered for inlining